@@ -1,6 +1,8 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - improve error handling of underlying exceptions
+      like 'Could not connect to'
 
 0.001008  2020-09-22 18:00:28+02:00 Europe/Vienna
     - fix 'Use of uninitialized value in string eq' warning
